--- a/WebContent/css/site.css
+++ b/WebContent/css/site.css
@@ -97,6 +97,7 @@ input {
 
 button {
 	border-radius: 20px;
+	margin: auto;
 }
 
 select {
@@ -116,6 +117,14 @@ h1, h2, h3 {
 a img {
 	width: 20px;
 }
+
+/**        vendas       **/
+
+.quantidade{
+	width: 40px;
+}
+
+
 
 /**       Tabelas		**/
 table {
